[gd_scene load_steps=15 format=2]

[ext_resource path="res://dialog/level1-gulizar/Dialog-gulizar-node.gd" type="Script" id=1]
[ext_resource path="res://dialog/şablon/font/Cave-Story.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://dialog/level1/font/Cave-Story.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://dialog/şablon/texture/govde.png" type="Texture" id=4]
[ext_resource path="res://dialog/şablon/texture/tus.png" type="Texture" id=5]
[ext_resource path="res://dialog/level1/texture/isimkutusu.png" type="Texture" id=6]
[ext_resource path="res://dialog/level1-gulizar/DialogBox-gulizar.gd" type="Script" id=7]
[ext_resource path="res://dialog/level1-aurora/font/Cave-Story.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://dialog/level1-gulizar/Secenek.gd" type="Script" id=9]
[ext_resource path="res://dialog/şablon/font/body_font.tres" type="DynamicFont" id=10]

[sub_resource type="DynamicFont" id=1]
size = 33
outline_size = 1
outline_color = Color( 0.901961, 0.976471, 0, 1 )
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 33
outline_size = 1
outline_color = Color( 0.854902, 0.0862745, 0.0862745, 1 )
extra_spacing_char = 2
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 37
extra_spacing_char = 1
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 879.511, 130 ), Vector2( 879.511, 120 ) ]
}

[node name="Dialog-gulizar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialoggulizar" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -480.0
margin_top = -216.0
margin_right = 480.0
margin_bottom = -56.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Dialoggulizar"]
margin_right = 960.0
margin_bottom = 160.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Dialoggulizar"]
margin_left = 32.0
margin_top = -55.0
margin_right = 224.0
margin_bottom = 8.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nebula" type="RichTextLabel" parent="Dialoggulizar/TextureRect2"]
visible = false
anchor_left = 0.226
anchor_top = 0.43
anchor_right = 0.226
anchor_bottom = 0.43
margin_left = -0.391998
margin_top = -4.09
margin_right = 148.608
margin_bottom = 54.91
custom_fonts/normal_font = SubResource( 1 )
text = "NEBULA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gulizar" type="RichTextLabel" parent="Dialoggulizar/TextureRect2"]
margin_left = 37.0
margin_top = 23.0
margin_right = 187.0
margin_bottom = 63.0
custom_fonts/normal_font = SubResource( 2 )
text = "GULIZAR"

[node name="RichTextLabel" type="RichTextLabel" parent="Dialoggulizar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -20.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "testing dialog. This is a looooong dialog. Lest see."
text = "testing dialog. This is a looooong dialog. Lest see."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tus" type="Sprite" parent="Dialoggulizar"]
visible = false
position = Vector2( 879.511, 131.597 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialoggulizar/tus"]
autoplay = "tus"
anims/tus = SubResource( 4 )

[node name="Tween" type="Tween" parent="Dialoggulizar"]

[node name="Secenek" type="Control" parent="."]
margin_left = -480.0
margin_top = -224.0
margin_right = 480.0
margin_bottom = -64.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="govde" type="Sprite" parent="Secenek"]
position = Vector2( 480, 80 )
scale = Vector2( 15.2381, 2.53968 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="yes" type="RichTextLabel" parent="Secenek"]
visible = false
margin_left = 220.0
margin_top = 50.0
margin_right = 284.0
margin_bottom = 114.0
custom_fonts/normal_font = ExtResource( 10 )
bbcode_text = "
YES"
text = "
YES"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="no" type="RichTextLabel" parent="Secenek"]
visible = false
margin_left = 700.0
margin_top = 50.0
margin_right = 764.0
margin_bottom = 114.0
custom_fonts/normal_font = ExtResource( 10 )
bbcode_text = "
NO"
text = "
NO"
__meta__ = {
"_edit_lock_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="Secenek"]
margin_left = 420.0
margin_top = 50.0
margin_right = 610.0
margin_bottom = 114.0
custom_fonts/normal_font = ExtResource( 10 )
bbcode_text = "
HEAL IT?"
text = "
HEAL IT?"
__meta__ = {
"_edit_lock_": true
}
[connection signal="baslat" from="." to="Dialoggulizar" method="_on_Dialogmasa_baslat"]
[connection signal="dialog_bitti" from="Dialoggulizar" to="." method="_on_Dialoggulizar_dialog_bitti"]
[connection signal="dialog_bitti" from="Dialoggulizar" to="Secenek" method="_on_Dialoggulizar_dialog_bitti"]
[connection signal="son" from="Dialoggulizar" to="." method="_on_Dialoggulizar_son"]
[connection signal="tween_completed" from="Dialoggulizar/Tween" to="Dialoggulizar" method="_on_Tween_tween_completed"]
[connection signal="no" from="Secenek" to="Dialoggulizar" method="_on_Secenek_no"]
[connection signal="yes" from="Secenek" to="Dialoggulizar" method="_on_Secenek_yes"]
[connection signal="yes" from="Secenek" to="Secenek" method="_on_Secenek_yes"]
